tests/snapshots/python_test__upstream_with_scripts.snap
---
source: tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    "foo.bar";
    "scripts.blah" [shape=box];
    "scripts.blah" -> "foo.bar";
}
