tests/snapshots/python_test__upstream_with_scripts_mermaid.snap
---
source: tests/python_test.rs
expression: output
---
flowchart TD
    scripts_blah["scripts.blah"] --> foo_bar("foo.bar")
